<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/normal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x24"
            android:layout_weight="1"
            android:background="@drawable/ic_button_selector"
            android:text="@string/label_effect_none"
            android:textColor="@drawable/color_btn_selector"
            android:textSize="@dimen/x25" />


        <Button
            android:id="@+id/classical_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x24"
            android:layout_weight="1"
            android:background="@drawable/ic_button_selector"
            android:text="@string/label_effect_classical"
            android:textColor="@drawable/color_btn_selector"
            android:textSize="@dimen/x25" />


        <Button
            android:id="@+id/jazz_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_button_selector"
            android:text="@string/label_effect_jazz"
            android:textColor="@drawable/color_btn_selector"
            android:textSize="@dimen/x25" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y16"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rock_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x24"
            android:layout_weight="1"
            android:background="@drawable/ic_button_selector"
            android:text="@string/label_effect_rock"
            android:textColor="@drawable/color_btn_selector"
            android:textSize="@dimen/x25" />


        <Button
            android:id="@+id/folk_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x24"
            android:layout_weight="1"
            android:background="@drawable/ic_button_selector"
            android:text="@string/label_effect_folk"
            android:textColor="@drawable/color_btn_selector"
            android:textSize="@dimen/x25" />


        <Button
            android:id="@+id/pop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_button_selector"
            android:text="@string/label_effect_pop"
            android:textColor="@drawable/color_btn_selector"
            android:textSize="@dimen/x25" />
    </LinearLayout>
</LinearLayout>