<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <Button
        android:id="@+id/left_front_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_left_front_btn"
        android:background="@drawable/ic_button_selector"
        android:textColor="@drawable/color_btn_selector"
        android:textSize="@dimen/x25" />


    <Button
        android:id="@+id/left_rear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_left_rear_btn"
        android:layout_gravity="bottom|left"
        android:background="@drawable/ic_button_selector"
        android:textColor="@drawable/color_btn_selector"
        android:textSize="@dimen/x25" />



    <Button
        android:id="@+id/right_front_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_right_front_btn"
        android:layout_gravity="right|top"
        android:background="@drawable/ic_button_selector"
        android:textColor="@drawable/color_btn_selector"
        android:textSize="@dimen/x25" />



    <Button
        android:id="@+id/right_rear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_right_rear_btn"
        android:layout_gravity="right|bottom"
        android:background="@drawable/ic_button_selector"
        android:textColor="@drawable/color_btn_selector"
        android:textSize="@dimen/x25" />

    <TextView
        android:id="@+id/hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@drawable/color_btn_selector"
        />

</FrameLayout>