<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/left_nav_main_diver_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_detail_iv"
        android:layout_width="@dimen/x41"
        android:layout_height="@dimen/y41"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_detail_back"
        android:layout_marginBottom="@dimen/x6"
        android:layout_marginRight="@dimen/x18"/>


    <TextView
        android:id="@+id/test_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_test_detail_title_hint"
        android:textColor="@color/left_nav_text_color"
        android:textSize="@dimen/x20" />

    <ListView
        android:id="@+id/test_detail_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test_detail_des_title_tv"
        android:layout_below="@id/test_detail_tv"
        android:layout_marginTop="@dimen/y12"
        android:dividerHeight="@dimen/x1"
        android:divider="@color/left_nav_main_diver_color"
        android:background="@color/main_background_color"/>


    <TextView
        android:id="@+id/test_detail_des_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test_detail_des_tv"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/y20"
        android:text="@string/label_manual_test_detail_result_hint"
        android:textColor="#009944"
        android:textSize="@dimen/x25" />

    <TextView
        android:id="@+id/test_detail_des_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/close_detail_iv"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_manual_test_detail_success_hint"
        android:textColor="@color/white_color"
        android:textSize="@dimen/x25" />
</RelativeLayout>