<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y58"
    android:background="@color/black_color"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/layout_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/x22">

        <ImageView
            android:layout_width="@dimen/x32"
            android:layout_height="@dimen/y32"
            android:layout_gravity="center"
            android:src="@mipmap/ic_back" />
    </FrameLayout>

    <TextView
        android:id="@+id/bar_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/layout_back"
        android:paddingLeft="10dp"
        android:text="@string/label_main_bar_title"
        android:textColor="@color/white_color"
        android:textSize="@dimen/x25" />

    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/bar_title_tv"
        android:paddingLeft="@dimen/x17"
        android:textColor="@color/white_color"
        android:textSize="@dimen/x25" />

    <TextClock
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/x17"
        android:format24Hour="HH:mm"
        android:text="12:00"
        android:textColor="@color/white_color"
        android:textSize="@dimen/x25" />
    <!--<TextView-->
    <!--android:id="@+id/time_tv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_marginRight="@dimen/x17"-->
    <!--android:text="12:00"-->
    <!--android:textColor="@color/white_color"-->
    <!--android:textSize="@dimen/x25" />-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/time_tv"
        android:layout_toRightOf="@id/version_tv"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/x17">


        <TextView
            android:id="@+id/start_task_tv"
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/y36"
            android:layout_marginRight="@dimen/x12"
            android:background="@drawable/ic_button_selector"
            android:gravity="center"
            android:text="@string/label_start_task"
            android:textColor="@drawable/color_btn_selector" />

        <TextView
            android:id="@+id/stop_task_tv"
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/y36"
            android:layout_marginRight="@dimen/x16"
            android:background="@drawable/ic_button_selector"
            android:gravity="center"
            android:text="@string/label_stop_task"
            android:textColor="@drawable/color_btn_selector" />

        <ImageView
            android:id="@+id/aux_iv"
            android:layout_width="@dimen/x28"
            android:layout_height="@dimen/y28"
            android:src="@mipmap/ic_aux_bar_closed" />

        <ImageView
            android:id="@+id/tf_iv"
            android:layout_width="@dimen/x28"
            android:layout_height="@dimen/y28"
            android:src="@mipmap/ic_tf_bar_closed" />

        <ImageView
            android:id="@+id/usb_iv"
            android:layout_width="@dimen/x28"
            android:layout_height="@dimen/y28"
            android:src="@mipmap/ic_usb_bar_closed" />


        <ImageView
            android:id="@+id/gps_iv"
            android:layout_width="@dimen/x28"
            android:layout_height="@dimen/y28"
            android:src="@mipmap/ic_gps_bar_closed" />

        <ImageView
            android:id="@+id/bluetooth_iv"
            android:layout_width="@dimen/x28"
            android:layout_height="@dimen/y28"
            android:src="@mipmap/ic_bluetooth_bar_closed" />

        <ImageView
            android:id="@+id/wifi_iv"
            android:layout_width="@dimen/x28"
            android:layout_height="@dimen/y28"
            android:src="@mipmap/ic_wifi_bar_closed" />
    </LinearLayout>

</RelativeLayout>